// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallAppItem component should be rendered correctly an app 1`] = `
<div
  className="sto-small-app-item"
  onClick={[Function]}
  tabIndex={0}
>
  <img
    alt="test-icon"
    className="sto-small-app-item-icon"
    height="64"
    src="<svg></svg>"
    width="64"
  />
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      cozy 
      Test
    </h4>
    <p
      className="sto-small-app-item-detail"
    >
      Cozy Cloud Inc.
    </p>
    <p
      className="sto-small-app-item-detail"
    >
      Version 3.0.3
    </p>
  </div>
</div>
`;

exports[`SmallAppItem component should be rendered correctly an installed app 1`] = `
<div
  className="sto-small-app-item"
  onClick={[Function]}
  tabIndex={0}
>
  <img
    alt="test2-icon"
    className="sto-small-app-item-icon"
    height="64"
    src="<svg></svg>"
    width="64"
  />
  <Icon
    className="sto-small-app-item-badge-installed"
    color="#2bba40"
    icon="check"
  />
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      
      Test2
    </h4>
    <p
      className="sto-small-app-item-detail"
    >
      Naming me
    </p>
    <p
      className="sto-small-app-item-detail"
    >
      Version 3.0.3
    </p>
  </div>
</div>
`;

exports[`SmallAppItem component should be rendered correctly an installed app 2`] = `
<div
  className="sto-small-app-item"
  onClick={[Function]}
  tabIndex={0}
>
  <svg
    className="sto-small-app-item-icon--default blurry"
    height="64"
    style="padding: 0 8px"
    width="48"
  >
    <use
      xlinkHref="#undefined"
    />
  </svg>
  <Icon
    className="sto-small-app-item-badge-installed"
    color="#2bba40"
    icon="check"
  />
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      
      Test2
    </h4>
    <p
      className="sto-small-app-item-detail"
    >
      Naming me
    </p>
    <p
      className="sto-small-app-item-detail"
    >
      Version 3.0.3
    </p>
  </div>
</div>
`;
